# ai-news-agent

./: .env.example  .gitignore  .mcp.json  2025-07-30-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  DEPLOYMENT_REVIEW_SUMMARY.md  FRONTEND.md  INITIAL.md  LAUNCH_ANNOUNCEMENT.md  MANUAL_TESTING_GUIDE.md  NETFLIX_FRONTEND_DESIGN.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_EMBEDDINGS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README-updated.md  README.md  SECURITY.md  TASK.md  UX-Design-Document.md  configuration-guide.md  database_migrations.sql  pyproject.toml  requirements.prod.txt  requirements.txt  test_production_fetch.py  test_setup.py  todo.txt  vercel.json
.claude/: settings.local.json
.kilocode/: mcp.json
PRPs/: ai-news-aggregator.md  api-enhancement.md  audio-integration.md  backend-core-apis.md  critical-security-fixes.md  frontend-supabase-direct.md  frontend.md  github-actions-direct-execution.md  mcp-server.md  netflix-style-frontend.md  new-ai-news-sources.md  pre-production-deployment-fixes.md  vercel-deployment.md
UI/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
ai_docs/: color-palette.md  ux-design.md
api/: index.py
config/: arxiv_categories.json  github_repos.json  reddit_subs.json  rss_feeds.json
mcp-server/: DEPLOYMENT.md  README.md  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
migrations/: 001_initial_schema.sql  002_add_search_indexes.sql
mockup/: index.html  script.js  styles.css
scripts/: fetch_articles.py  generate_digest.py
spec/: code-cleanup.md  (+18 more)
(+110 files in other folders)
